# kb

./: .gitignore  .sesskey  README.md  app.py  cli.py  llms-ctx.txt  pyproject.toml  requirements.txt  setup.py  start.sh  test_simple.py  ui.py
docs/: api_design.md  design_doc.md  prd.md  project_structure.md
scripts/: build_db.py  build_db_sqlite.py
src/: app.py  app_debug.py  app_minimal.py  cli.py  db_viewer.py  main.py
src/knowledge_base/: __init__.py  config_manager.py
src/knowledge_base/ai/: anthropic_llm.py  base_llm.py  embedding_manager.py  llm_factory.py  llm_manager.py  openai_llm.py  remote_llm.py  remote_models.py  suggestion_engine.py  suggestion_service.py
src/knowledge_base/core/: analytics.py  content_manager.py  discovery.py  models.py  session_manager.py
src/knowledge_base/extractors/: arxiv_extractor.py  base.py  extractor_factory.py  web.py  (+5 more)
static/js/: style-toggle.js
static/styles/: modern.css  retro_terminal.css
tasks/: prd-knowledge-base-ui.md  tasks-prd-knowledge-base-ui.md
tests/: conftest.py  test_loader_integration.py  test_loader_unit.py
tests/ai/: __init__.py  test_config_manager.py  test_llm_factory.py  test_openai_llm.py  test_suggestion_engine.py
tests/core/: test_content_manager.py  test_models.py
tests/extractors/: test_arxiv_extractor.py  test_extractor_factory.py  test_html_extractor.py  test_youtube_extractor.py
tests/routes/: __init__.py  test_admin_routes.py  test_content_routes.py  test_data_routes.py  test_ui.py  test_ui_simple.py
tests/storage/: test_database.py
tests/ui/: test_components.py
(+32 files in other folders)
