[project]
name = "knowledge_base_loader"
version = "0.0.1"
authors = [
  { name="Jeremy Miller", email="jeremymiller00@gmail.com" },
]
description = "Installable kb loader"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/..."
Issues = "https://github.com/..."